[package]
name = "spin-langevin"
version = "0.1.0"
authors = ["hmb <humberto.munozb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9"
nalgebra = "0.21"
ndarray = {version="0.13", features=["rayon"]}
num-traits = "0.2"
packed_simd = "0.3"
rand = "0.7"
rand_distr = "0.2"
rayon = "1.0"
simba = {version="0.1", features=["packed_simd"]}
simd-phys = {git="https://github.com/hmunozb/simd-phys-rs.git"}