[package]
name = "spin-langevin"
version = "0.1.0"
authors = ["hmb <humberto.munozb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alga = "0.9"
itertools = "0.9"
nalgebra = "0.19"
ndarray = {version="0.13", features=["rayon"]}
num-traits = "0.2"
rand = "0.7"
rand_distr = "0.2"
rayon = "1.0"
simd-phys = {git="https://github.com/hmunozb/simd-phys-rs.git"}

[dev-dependencies]
rand_xoshiro = "0.4"